# famoco-certreset

./: .gitignore  README.md  pyproject.toml
.github/workflows/: django.yml
config/: settings.py  urls.py
config/settings/: base.py  prod.py  test.py
reset/: forms.py  mdm.py  urls.py  views.py
reset/tests/: test_mdm.py
static/: bulma.css  style.css
templates/: _devices_list.html  base.html  devices.html  home.html  reset.html
