[tool.poetry]
name = "famoco-certreset"
version = "0.1.0"
description = ""
authors = ["Adam Guillot <adam.guillot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
