[tool.poetry]
name = "famoco-certreset"
version = "0.1.0"
description = ""
authors = ["Adam Guillot <adam.guillot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
requests = "^2.27.1"
gunicorn = "^20.1.0"
django-htmx = "^1.9.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
pytest = "^7.1.1"
pytest-django = "^4.5.2"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
